Rejekts2019/patch/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    #kubernetes.io/ingress.provider: nginx
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/tls-acme: "true"
    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropiate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
    nginx.ingress.kubernetes.io/auth-response-headers: username
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Scope-OrgID $remote_user;
  name: maya-auth-ingress
spec:
  tls:
  - hosts:
    - foo.bar.io
    secretName: ssl-secret-staging
  rules:
  - host: foo.bar.io 
    http:
      paths:
      - path: /cortex-push/
        backend:
          serviceName: distributor
          servicePort: 80
      - path: /cortex-pull/
        backend:
          serviceName: querier
          servicePort: 80
      - path: /cortex-configs/
        backend:
          serviceName: configs
          servicePort: 80
      - path: /cortex-am/
        backend:
          serviceName: alertmanager
          servicePort: 80
      - path: /alertstore/
        backend:
          serviceName: alertstore
          servicePort: 80
